@startuml
'https://plantuml.com/class-diagram

interface Parcela {
    +ubicar(Defensa : defensa): z
}

class InterfazGrafica {}

class Tierra {
    +ubicar(Defensa : defensa): void
}

class Rocoso {
    +ubicar(Defensa : defensa): void
}

abstract class Pasarela {
    +ubicar(Defensa : defensa): void
}

class Meta {}
class Largada {}

abstract class Enemigo {
    +recibirAtaque(Defensa : defensa): void
    +destruirse(): void
    +atacar(Jugador : jugador): void
}

Parcela "1..*" <--*  InterfazGrafica
Parcela <|.. Tierra
Parcela <|.. Rocoso
Parcela <|.. Pasarela

Pasarela <|-- Meta
Pasarela <|-- Largada
Enemigo <--o Parcela


@enduml